Add login form and functionality

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
           <a class="nav-link" href="{{url_for('login')}}">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Mein Zettelkasten</a>
+          <a class="nav-link" href="{{url_for('dashboard')}}">Mein Zettelkasten</a>
         </li>
       </ul>
     </div>
