--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,1 +1,11 @@
 {% extends "base.html" %}
+
+{% block content %}
+
+<h3>Du bist eigeloggt, {{user}}</h3>
+
+<p> {{get_flashed_messages()[0]}} </p>
+
+<a href="{{url_for('logout')}}">Logout</a>
+    
+{% endblock content %}
