--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,17 @@
 {% extends "base.html" %}
+
+{% block content %}
+    <h1>Willkommen in der Zettelkasten App!</h1>
+
+{% if user %}
+<h2>Eingeloggt als User: {{user}} </h2>
+<p>Möchtest du zu deinem Zettelkasten?</p>
+<a href="{{url_for('dashboard')}}">Dashboard</a>
+{% else %}
+<h2>Du bist nicht eingeloggt</h2>
+<p>Möchtest du einen Account erstellen oder dich einloggen?</p>
+<a href="{{url_for('register')}}">Registrierung</a>
+<a href="{{url_for('login')}}">Login</a>
+{% endif %}
+
+{% endblock content %}
