--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,1 +1,10 @@
 {% extends "base.html" %}
+
+{% block content %}
+<h2>Login</h2>
+
+{% if error %}
+{{error}}
+{% endif %}
+{{render_form(form)}}
+{% endblock content %}
