--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,6 +2,8 @@
 
 {% block content %}
     <h2>Registrierung</h2>
-
+{% if error %}
+{{error}}
+{% endif %}
     {{render_form(form)}}
 {% endblock content %}
