Add function for input and saving new notes

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -7,5 +7,6 @@
 <p> {{get_flashed_messages()[0]}} </p>
 
 <a href="{{url_for('logout')}}">Logout</a>
+<a href="{{url_for('note')}}">Neue Notiz</a>
     
 {% endblock content %}
