--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 
 {% block content %}
 <h2>Login</h2>
@@ -6,5 +6,12 @@
 {% if error %}
 {{error}}
 {% endif %}
+{% if user %}
+<h2>Du bist bereits als {{user}} eingeloggt.</h2>
+<p>Möchtest du zu deinem Zettelkasten?</p>
+<a href="{{url_for('dashboard')}}">Dashboard</a>
+{% else %}
 {{render_form(form)}}
+{% endif %}
+
 {% endblock content %}
