--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,5 +1,29 @@
 {% extends "base.html" %}
 
+{% block navbar %}
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Zettelkasten</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+           <li class="nav-item">
+            <a class="nav-link" href="{{url_for('dashboard')}}">Mein Zettelkasten</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('note')}}">Neue Notiz</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+          </li>
+        </ul>
+       </div>
+     </div>
+  </nav>
+{% endblock navbar %}
+
 {% block content %}
 
 <h3>Du bist eingeloggt, {{user}}</h3>
