--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -27,6 +27,24 @@
 {% block content %}
 
 <h3>Du bist eingeloggt, {{user}}</h3>
+
+<aside class="sidebar">
+  <ul class="list-unstyled px-2">
+    <li id="dashboard" class="active">
+      <a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-home"></i> Alle Notizen</a>
+    </li>
+    {% for category in my_categories %}
+      <li id="projects">
+        <a href="#"> {{category.category_name}} </a>
+      </li>
+    {% endfor %}
+  </ul>
+  <div>
+    {{render_form(form)}}
+  </div>
+</aside>
+
+<section>
 <p> Hier sind deine Notizen:</p>
 
 <div class="card-columns" >
