--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -55,7 +55,7 @@
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item">{{note.source}}</li>
-    <li class="list-group-item">{{note.category}}</li>
+          <li class="list-group-item">{{note.category_name}}</li>
   </ul>
   <div class="card-body">
     <a href="#" class="card-link">Bearbeiten</a>
