--- a/app/templates/note.html
+++ b/app/templates/note.html
@@ -1,6 +1,9 @@
 {% extends "dashboard.html" %}
 
 {% block content %}
+<main class="full_width">
 <h2>Notiz erstellen oder bearbeiten</h2>
+<br>
 {{render_form(form)}}
+</main>
 {% endblock content %}
