--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,13 +1,81 @@
-body{
-    background-color: blanchedalmond;
+.holy-grail {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: rgb(65, 65, 65); 
+}
+
+.header {
+    background-color: rgb(65, 65, 65) ;
+    padding: 1em 10%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    a, li{
+        color: rgb(213, 213, 213);
+    }
+    a:hover{
+        color: white;
+    }
+    .nav__links{
+        list-style: none;
+    }
+    .nav__links li{
+        display: inline-block;
+        align-items:baseline;
+        padding-inline: 3em;
+        text
+    }
+}
+
+.footer {
+    background-color: rgb(65, 65, 65);
+    padding: 2em;
+    text-align: center;
+    height: 100px;
+    a{
+        color: rgb(213, 213, 213);
+    }
+    a:hover{
+        color: white;
+    }
+}
+
+.content {
+    display: flex;
+    flex: 1;
+    flex-grow: 1;
+}
+
+.full_width{
+    background-color: rgb(183, 183, 183);
+    padding: 10%;
+    flex-grow: 1;
+}
+
+.sidebar {
+    flex: 1;
+    padding: 10px;
+    background-color: rgb(122, 122, 122);
+    width: 20vw;
+    a {
+        color: antiquewhite;
+    }
+}
+
+.main {
+    flex: 2;
+    background-color: rgb(183, 183, 183);
+    padding: 10px;
+    width: 80vw;
 }
 
 .card-columns {
-
-    columns: 3;
+    columns:auto ;
+    width: 80%;
     margin: 5%;
     display: inline-block;
-    -webkit-column-break-inside: avoid-column ;
+    -webkit-column-break-inside: avoid ;
   }
 
 .card{
@@ -15,3 +83,4 @@ body{
     justify-content: space-between;
     margin: 12px;
 }
+
