--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,27 +2,30 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href={{url_for("static", filename="style.css")}}>
-    <title>Zettelkasten</title>
-</head>
-<body>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <link rel="stylesheet" href={{url_for("static", filename="style.css")}}>
+      <title>Zettelkasten</title>
+  </head>
+  <body class="holy_grail">
 
-{% block navbar %}
+    {% block navbar %}
 
-{% endblock navbar %}
+    {% endblock navbar %}
 
-{% block sidebar %}
-  
-{% endblock sidebar %}
+    {% block content %}
 
-{% block content %}
+    {% endblock content %}
 
-{% endblock content %}
+    {% block footer %}
+    <footer class="footer">
+      <a href="https://github.com/NKuhnHWR/Zettelkasten">Zum GitHub-Repository</a><br>
+      <a href="https://nkuhnhwr.github.io/Zettelkasten/">Zur Dokumentation</a>
+    </footer>
+    {% endblock footer %}
 
-</body>
+  </body>
 </html>
