--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,71 +1,57 @@
 {% extends "base.html" %}
 
 {% block navbar %}
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Zettelkasten</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-           <li class="nav-item">
-            <a class="nav-link" href="{{url_for('dashboard')}}">Mein Zettelkasten</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{url_for('note')}}">Neue Notiz</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
-          </li>
-        </ul>
-       </div>
-     </div>
+<nav class="header">
+  <a class="navbar-brand" href="#">Zettelkasten</a>
+    <ul class="nav__links">
+      <li><a href="{{url_for('dashboard')}}" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-home"></i>Mein Zettelkasten</a></li>
+      <li><a href="{{url_for('note')}}"class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-home"></i>Neue Notiz</a></li>
+      <li><a href="{{url_for('logout')}}"class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-home"></i>Logout</a></li>
+    </ul>
   </nav>
 {% endblock navbar %}
 
 {% block content %}
-
-<h3>Du bist eingeloggt, {{user}}</h3>
-
-<aside class="sidebar">
-  <ul class="list-unstyled px-2">
-    <li id="dashboard" class="active">
-      <a href="{{url_for('dashboard')}}" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-home"></i> Alle Notizen</a>
-    </li>
-    {% for category in my_categories %}
-      <li id="projects">
-        <a href="{{url_for('filtered_dashboard', id=category.id)}}"> {{category.category_name}} </a>
+<div class="content">
+  <aside class="sidebar">
+    <ul class="list-unstyled px-2">
+      <li>
+        <a href="{{url_for('dashboard')}}"class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-home"></i>Alle Notizen
+        </a>
       </li>
-    {% endfor %}
-  </ul>
-  <div>
-    {{render_form(form)}}
-  </div>
-</aside>
-
-<section>
-<p> Hier sind deine Notizen:</p>
-
-<div class="card-columns" >
-{% for note in my_notes %}
-    <div class="card" style="width: 18rem;" >
-  <div class="card-body">
-    <p class="card-text">{{note.content}}</p>
-  </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">{{note.source}}</li>
-          <li class="list-group-item">{{note.category_name}}</li>
-  </ul>
-  <div class="card-body">
-    <a href="#" class="card-link">Bearbeiten</a>
-    <a href="#" class="card-link">Löschen</a>
-  </div>
+      {% for category in my_categories %}
+      <li>
+        <a href="{{url_for('filtered_dashboard', id=category.id)}}"class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-home"></i> 
+          <span>{{category.category_name}}</span>
+        </a>
+      </li>
+      {% endfor %}
+    </ul>
+    <div>
+      {{render_form(form)}}
+    </div>
+  </aside>
+  <main class="main">
+    <h3>Du bist eingeloggt, {{user}}</h3>
+    <p> Hier sind deine Notizen:</p>
+    <div class="card-columns"  >
+      {% for note in my_notes %}
+        <div class="card" style="width: 18rem;" >
+          <div class="card-body">
+            <p class="card-text">{{note.content}}</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">{{note.source}}</li>
+            <li class="list-group-item">{{note.category_name}}</li>
+          </ul>
+          <div class="card-body">
+            <a href="{{url_for('change_note', id=note.id)}}" class="card-link">Bearbeiten</a>
+            <a href="#" class="card-link">Löschen</a>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </main>
 </div>
-{% endfor %}
-</div> 
-
-<a href="{{url_for('logout')}}">Logout</a>
-<a href="{{url_for('note')}}">Neue Notiz</a>
-    
 {% endblock content %}
+
