--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "index.html" %}
 
 {% block content %}
+<main class="full_width"> 
 <h2>Login</h2>
 
 {% if error %}
@@ -13,5 +14,5 @@
 {% else %}
 {{render_form(form)}}
 {% endif %}
-
+</main>
 {% endblock content %}
