--- a/app/templates/note.html
+++ b/app/templates/note.html
@@ -1,5 +1,6 @@
 {% extends "dashboard.html" %}
 
+<!-- This block renders the note form -->
 {% block content %}
 <main class="full_width">
 <h2>Notiz erstellen oder bearbeiten</h2>
