--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,5 +1,6 @@
 {% extends "index.html" %}
 
+<!-- In this block is a condition, showing either the link to the dashboard or the register form, depending if the user is logged in--->
 {% block content %}
 <main class="full_width">
 <h2>Registrierung</h2>
