--- a/app/templates/filtered_dashboard.html
+++ b/app/templates/filtered_dashboard.html
@@ -7,6 +7,7 @@
       <li id="dashboard" class="active">
         <a href="{{url_for('dashboard')}}" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-home"></i> Alle Notizen</a>
       </li>
+      <!-- The following loop iterates through th users categories to create a dynamic sidebar -->
       {% for category in my_categories %}
         <li id="projects">
           <a href="{{url_for('filtered_dashboard', id=category.id)}}"class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-home"></i> {{category.category_name}} </a>
@@ -20,6 +21,7 @@
     </div>
     <p> Hier sind deine Notizen:</p>
     <div class="card-columns"  >
+      <!-- The following loop iterates through this users notes and prints them in Bootstraps card-layout-->
       {% for note in my_notes %}
         <div class="card" style="width: 18rem;" >
           <div class="card-body">
