--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,6 @@
 {% extends "index.html" %}
 
+<!-- In this block is a condition, showing either the link to the dashboard or the login form, depending if the user is logged in--->
 {% block content %}
 <main class="full_width"> 
 <h2>Login</h2>
